JUnit4 to JUnit5; jupiter library added; Changed as IntelliJ project